# atlasfx-research

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: production_cost_envelope.json  production_cost_envelope_v2.json
docs/: COST_MODEL.md  DATA.md  EVIDENCE_MAP.md  KEY_FINDINGS.md  RESEARCH_NARRATIVE.md  SAC_EXPERIMENT_LOG.md
docs/evidence/: BASELINES.md  CANON_EVAL_V2.md  COST_ENVELOPE_AB_TESTING.md  E046_OOS_2025_AUDIT.md  E052_SNIPER_V2_REPORT.md  EXPERT_REVIEW_REPORT.md  HARDENING_MATRIX_CAUSAL.md  SLIPPAGE_SENSITIVITY_ANALYSIS.md  TECHNICAL_FIXES_MASTER.md
scripts/: evaluate_canonical.py  evaluate_testset.py  train_experiment.py
src/atlasfx/: __init__.py
src/atlasfx/environments/: __init__.py  trading_env.py
src/atlasfx/evaluation/: __init__.py  extended_metrics.py  forex_notional.py  metrics.py  trading_metrics.py
src/atlasfx/risk/: __init__.py  cost_envelope.py  cost_envelope_enforcement.py  cost_envelope_global_pause.py  drawdown_breaker.py
src/atlasfx/training/: __init__.py  callbacks.py  sac_trainer.py
src/atlasfx/utils/: __init__.py  logging.py  pathing.py
tests/: conftest.py  test_cost_envelope.py  test_cost_envelope_global_pause.py  test_cost_envelope_mapping.py  test_cost_envelope_per_symbol.py  test_drawdown_breaker.py  test_exit_commission.py  test_extended_metrics_contract.py  test_mae_mfe.py  test_metrics_tracker_isolation.py  test_sizing_caps.py  test_trade_ledger.py
tests/fixtures/: sample_ticks.csv
