[project]
name = "atlasfx-research"
version = "0.1.0"
description = "Research portfolio project on intraday FX reinforcement learning, documenting a negative result under realistic trading costs."
authors = [
    { name = "Jose Flores Contreras" }
]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "pyyaml>=6.0",
    "pyarrow>=10.0.0",
    "tqdm>=4.64.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "pandas-ta>=0.3.14b",
    "torch",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "mypy>=1.8.0",
    "types-PyYAML",
    "pandas-stubs",
    "ruff>=0.6.0",
    "bandit>=1.7.5",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["atlasfx*"]

[tool.setuptools.package-data]
atlasfx = ["py.typed"]

# ============================
# Pytest
# ============================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# ✅ Asegura que pytest y los subprocesos vean el paquete dentro de src/
addopts = [
    "--verbose",
    "--cov=src/atlasfx",
    "--cov-report=term-missing",
    "--cov-report=html",
    "-n", "auto",
]
markers = [
    "integration: marks tests as integration tests (slow, full-pipeline)"
]

# ✅ Este truco asegura que src esté en sys.path para todos los tests
pythonpath = ["src"]


# ============================
# Mypy (Type Checking)
# ============================
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = [
  "numpy.*",
  "pandas.*",
  "pandas_ta.*",
  "yaml.*",
  "matplotlib.*",
  "sklearn.*",
  "seaborn.*",
  "torch.*",
  "matplotlib.*",
  "tqdm.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "atlasfx.environments.trading_env"
disable_error_code = ["type-arg"]

[[tool.mypy.overrides]]
module = [
  "tests.*",
  "scripts.*",
]
disable_error_code = ["import-untyped", "no-any-return", "type-arg"]

# ============================
# Ruff (Linter + Formatter)
# ============================
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "YTT", # flake8-2020
    "S",   # flake8-bandit (security)
    "BLE", # flake8-blind-except
    "A",   # flake8-builtins
    "COM", # flake8-commas
    "C90", # mccabe complexity
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "DJ",  # flake8-django
    "EM",  # flake8-errmsg
    "EXE", # flake8-executable
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "G",   # flake8-logging-format
    "INP", # flake8-no-pep420
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PYI", # flake8-pyi
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SLF", # flake8-self
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "TCH", # flake8-type-checking
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate (commented code)
    "PD",  # pandas-vet
    "PGH", # pygrep-hooks
    "PL",  # pylint
    "TRY", # tryceratops
    "NPY", # NumPy-specific rules
    "RUF", # Ruff-specific rules
]

ignore = [
    "E501",
    "B008",
    "C901",
    "COM812",
    "ISC001",
    "PLR0913",
    "PLR0912",
    "PLR0915",
    "S101",
    "S311",
    "T201",
    "EM101",
    "EM102",
    "TRY003",
    "N803",
    "N806",
    "SLF001",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]
"tests/**/*.py" = [
    "S101",
    "PLR2004",
    "ARG001",
    "ARG002",
    "NPY002",
    "PD002",
    "RET504",
    "PT003",
    "PT004",
    "PT006",
    "PT018",
    "PD901",
    "PTH123",
    "S603",
    "ERA001",
    "I001",
    "F401",
    "PLR0402",
    "C416",
    "B905",
    "PGH003",
]
"scripts/**/*.py" = [
    "T201",
    "INP001",
    "TCH003",
    "PTH103",
    "PTH110",
    "PTH118",
    "PTH123",
    "RUF003",
    "PT018",
    "BLE001",
]
"src/atlasfx/utils/pathing.py" = [
    "SIM102",
    "G004",
    "PTH103",
]
"src/atlasfx/models/*.py" = [
    "RUF002",
    "RUF003",
    "N812",
    "B006",
    "ERA001",
    "RET504",
    "SIM108",
    "PGH003",
    "RUF005",
    "PLR2004",
    "NPY002",
    "PTH118",
    "F841",
]

[tool.ruff.lint.isort]
known-first-party = ["atlasfx"]
force-sort-within-sections = true
lines-after-imports = 2

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 15
max-statements = 60

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.bandit]
skips = ["B101"]
